# pyproject-streamlit

./: pyproject.toml  streamlit_app.py
